import rubygem-munin-ruby from build82

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -823,6 +823,7 @@
     SUBDIR += rubygem-hiera-json
     SUBDIR += rubygem-hiera-puppet
     SUBDIR += rubygem-log4r
+    SUBDIR += rubygem-munin-ruby
     SUBDIR += rubygem-murder
     SUBDIR += rubygem-ohai
     SUBDIR += rubygem-sys-admin
