--- a/sysutils/iocage/Makefile
+++ b/sysutils/iocage/Makefile
@@ -2,7 +2,8 @@
 # $FreeBSD$
 
 PORTNAME=	iocage
-PORTVERSION=	1.6.2
+PORTVERSION=	1.7.3
+DISTVERSIONPREFIX=v
 CATEGORIES=	sysutils
 
 MAINTAINER=	robak@FreeBSD.org
