Completely undefine MACH_TIME from glib20

--- a/devel/glib20/Makefile
+++ b/devel/glib20/Makefile
@@ -113,7 +113,7 @@ post-patch:
 		s|#define HAVE_SYS_INOTIFY_H 1||' ${WRKSRC}/configure
 
 post-configure:
-	@${REINPLACE_CMD} -e 's|HAVE_MACH_MACH_TIME_H 1|HAVE_MACH_MACH_TIME_H 0|g' \
+	@${REINPLACE_CMD} -e 's|#define HAVE_MACH_MACH_TIME_H 1||g' \
 		${WRKSRC}/config.h
 
 post-install:
