Disable MACH_TIME on ffmpeg

--- a/multimedia/ffmpeg/Makefile
+++ b/multimedia/ffmpeg/Makefile
@@ -363,6 +363,10 @@ post-configure-THEORA-off:
 		-e 's|^(CONFIG_LIBTHEORA).*$$|\1=no|' \
 		${WRKSRC}/config.mak
 
+post-configure:
+	@${REINPLACE_CMD} -e 's|#define HAVE_MACH_MACH_TIME_H 1||g' \
+		${WRKSRC}/config.h
+
 post-install:
 .for PROG in ${FFPROGS}
 	@${MKDIR} ${STAGEDIR}${MAN1PREFIX}/man/man1
