Add clang37 and lldb37 metaports to make it easier to find the clang and lldb installed by devel/llvm37.
No port should depend on these ports.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1358,6 +1358,7 @@
     SUBDIR += linux_kdump
     SUBDIR += linux_libusb
     SUBDIR += lion
+    SUBDIR += lldb37
     SUBDIR += llnextgen
     SUBDIR += llvm-cheri
     SUBDIR += llvm-devel
