--- a/devel/lldb37/Makefile
+++ b/devel/lldb37/Makefile
@@ -3,13 +3,14 @@
 
 PORTNAME=	lldb
 PORTVERSION=	3.7
+PORTREVISION=	1
 CATEGORIES=	devel
 PKGNAMESUFFIX=	${LLVM_SUFFIX}
 
 MAINTAINER=	brooks@FreeBSD.org
 COMMENT=	LLVM Debugger (use devel/llvm${LLVM_SUFFIX})
 
-RUN_DEPENDS+=	lldb${LLVM_SUFFIX}:${PORTSDIR}/devel/llvm-devel
+RUN_DEPENDS+=	lldb${LLVM_SUFFIX}:${PORTSDIR}/devel/llvm${LLVM_SUFFIX}
 
 LLVM_SUFFIX=	37
 
