This module implements type coercions for MySQL date and time types.
WWW: http://search.cpan.org/dist/MooseX-Types-DateTime-MySQL/

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2688,6 +2688,7 @@
     SUBDIR += p5-MooseX-Types-DateTime
     SUBDIR += p5-MooseX-Types-DateTime-ButMaintained
     SUBDIR += p5-MooseX-Types-DateTime-MoreCoercions
+    SUBDIR += p5-MooseX-Types-DateTime-MySQL
     SUBDIR += p5-MooseX-Types-DateTimeX
     SUBDIR += p5-MooseX-Types-ISO8601
     SUBDIR += p5-MooseX-Types-JSON
