Unset the DISPLAY environment variable to work around a CppUnit test.

--- a/editors/libreoffice/Makefile
+++ b/editors/libreoffice/Makefile
@@ -298,7 +298,7 @@ CONFIGURE_ENV=	DMAKE=${LOCALBASE}/bin/dmake \
 
 MAKE_ENV+=	CXXFLAGS_WARN="${CXXFLAGS_WARN}"
 MAKE_ENV+=	GNUSED=${LOCALBASE}/bin/gsed
-MAKE_ENV+=	LANG=C LC_ALL=C
+MAKE_ENV+=	DISPLAY= LANG=C LC_ALL=C
 
 _MAKE_JOBS=	#
 
