--- a/www/bolt/Makefile
+++ b/www/bolt/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	bolt
 PORTVERSION=	2.2.10
+PORTREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	https://bolt.cm/distribution/
 
@@ -23,11 +24,9 @@ WRKSRC=	${WRKDIR}/bolt-git-2015-09-01-ca8eace
 OPTIONS_DEFINE=	MYSQL PGSQL SQLITE
 OPTIONS_DEFAULT=	SQLITE
 
-.include <bsd.port.options.mk>
-
-MYSQL_VARS=	USE_PHP+= pdo_mysql
-PGSQL_VARS=	USE_PHP+= pdo_pgsql
-SQLITE_VARS=	USE_PHP+= pdo_sqlite
+MYSQL_USE=	PHP=pdo_mysql
+PGSQL_USE=	PHP=pdo_pgsql
+SQLITE_USE=	PHP=pdo_sqlite
 
 do-install:
 	${INSTALL} -d -m 755 ${STAGEDIR}${WWWDIR}/
