devel/py-apscheduler: add new port
Advanced Python Scheduler (APScheduler) is a Python library that lets
you schedule your Python code to be executed later, either just once
or periodically. You can add new jobs or remove old ones on the fly as
you please. If you store your jobs in a database, they will also
survive scheduler restarts and maintain their state. When the
scheduler is restarted, it will then run all the jobs it should have
run while it was offline.

https://pypi.python.org/pypi/APScheduler

Approved by:	wg (maintainer)
Differential Revision:	https://reviews.freebsd.org/D3566

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -3859,6 +3859,7 @@
     SUBDIR += py-apipkg
     SUBDIR += py-appdirs
     SUBDIR += py-application
+    SUBDIR += py-apscheduler
     SUBDIR += py-archetypes.querywidget
     SUBDIR += py-archetypes.referencebrowserwidget
     SUBDIR += py-archetypes.schemaextender
