--- a/graphics/apvlv/Makefile
+++ b/graphics/apvlv/Makefile
@@ -26,6 +26,7 @@ CMAKE_ARGS+=	-DSYSCONFDIR=${PREFIX}/etc \
 		-DAPVLV_WITH_TXT=ON
 CFLAGS+=	-pthread
 LDFLAGS+=	-pthread
+WRKSRC=		${WRKDIR}/${DISTNAME}
 
 OPTIONS_DEFINE=	DJVU WEBKIT
 
