games/narcissu2: add new port
PR:		195800
Reviewed by:	games (amdmi3)
Approved by:	bapt (mentor, previous version)
Differential Revision:	https://reviews.freebsd.org/D1807

The anonymous protagonist is diagnosed with a terminal illness shortly
after his twentieth birthday, and is admitted to a hospital in Mito,
Ibaraki. There he meets Setsumi, a woman a few years older, who is
also terminally ill. Finding that they both reject to die either in
hospital or at home, they steal a car and run away together. -- VNDB

This package includes English translation for both Narcissu and
Narcissu: Side 2nd.

http://www.neechin.net/narcissu/

--- a/games/Makefile
+++ b/games/Makefile
@@ -616,6 +616,7 @@
     SUBDIR += nadar
     SUBDIR += naev
     SUBDIR += naev-data
+    SUBDIR += narcissu2
     SUBDIR += nazghul
     SUBDIR += nehquake
     SUBDIR += nelly
