Add support for smb:// protocol as non-default OPTION
PR:		202898
Submitted by:	jbeich@FreeBSD.org

--- a/multimedia/ffmpeg/Makefile
+++ b/multimedia/ffmpeg/Makefile
@@ -27,7 +27,7 @@ WANT_SDL=	yes
 OPTIONS_DEFINE=	AACPLUS ALSA AMR_NB AMR_WB ASS CDIO CELT DEBUG DOCS FAAC \
 		FDK_AAC FFSERVER FONTCONFIG FREETYPE FREI0R GSM ICONV \
 		JACK LAME LIBBLURAY LIBV4L MODPLUG OPENAL OPENCV OPENH264 OPENJPEG \
-		OPTIMIZED_CFLAGS OPUS PULSEAUDIO RTMP SCHROEDINGER SDL SPEEX \
+		OPTIMIZED_CFLAGS OPUS PULSEAUDIO RTMP SCHROEDINGER SDL SMB SPEEX \
 		THEORA VAAPI VDPAU VO_AACENC VO_AMRWBENC VORBIS VPX \
 		X11GRAB X264 X265 XVID
 
@@ -198,6 +198,11 @@ RTMP_CONFIGURE_ENABLE=	librtmp
 # schroedinger
 SCHROEDINGER_LIB_DEPENDS=	libschroedinger-1.0.so:${PORTSDIR}/multimedia/schroedinger
 SCHROEDINGER_CONFIGURE_ENABLE=	libschroedinger
+
+# smbclient
+SMB_LIB_DEPENDS=	libsmbclient.so:${PORTSDIR}/net/samba-libsmbclient
+SMB_CONFIGURE_ENABLE=	libsmbclient
+SMB_IMPLIES=		GPL3
 
 # speex
 SPEEX_LIB_DEPENDS=	libspeex.so:${PORTSDIR}/audio/speex
