Add pecl-hrtime 0.5.1, high resolution timing for PHP.
PR:		202889
Submitted by:	Gasol Wu <gasol.wu@gmail.com>

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -3637,6 +3637,7 @@
     SUBDIR += pecl-expect
     SUBDIR += pecl-gearman
     SUBDIR += pecl-hidef
+    SUBDIR += pecl-hrtime
     SUBDIR += pecl-htscanner
     SUBDIR += pecl-inclued
     SUBDIR += pecl-inotify
