Add php-uprofiler 0.11.0.20150219, lightweight profiler for PHP.
PR:		202829
Submitted by:	Gasol Wu <gasol.wu@gmail.com>

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -3688,6 +3688,7 @@
     SUBDIR += php-libawl
     SUBDIR += php-memoize
     SUBDIR += php-scalar_objects
+    SUBDIR += php-uprofiler
     SUBDIR += php-xdebug
     SUBDIR += php5-blitz
     SUBDIR += php5-blitz-devel
