Add devel/p5-File-Slurper, (yet another) file slurping module that aims to be more correcter than the others.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2271,6 +2271,7 @@
     SUBDIR += p5-File-Slurp
     SUBDIR += p5-File-Slurp-Tiny
     SUBDIR += p5-File-Slurp-Tree
+    SUBDIR += p5-File-Slurper
     SUBDIR += p5-File-Spec-Native
     SUBDIR += p5-File-Stream
     SUBDIR += p5-File-Sync
