--- a/textproc/p5-Pod-POM/Makefile
+++ b/textproc/p5-Pod-POM/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	Pod-POM
-PORTVERSION=	0.29
-PORTREVISION=	1
+PORTVERSION=	2.00
 CATEGORIES=	textproc perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -14,7 +13,7 @@ COMMENT=	POD Object Model
 LICENSE=	ART10 GPLv1
 LICENSE_COMB=	dual
 
-BUILD_DEPENDS=	p5-File-Slurp>=0:${PORTSDIR}/devel/p5-File-Slurp
+BUILD_DEPENDS=	p5-File-Slurper>=0.004:${PORTSDIR}/devel/p5-File-Slurper
 RUN_DEPENDS:=	${BUILD_DEPENDS}
 
 USES=		perl5
