--- a/devel/p5-File-Slurper/Makefile
+++ b/devel/p5-File-Slurper/Makefile
@@ -13,6 +13,7 @@ COMMENT=	Simple, sane and efficient module to slurp a file
 LICENSE=	ART10 GPLv1
 LICENSE_COMB=	dual
 
+NO_ARCH=	yes
 USES=		perl5
 USE_PERL5=	configure
 
