--- a/textproc/p5-Pod-POM/Makefile
+++ b/textproc/p5-Pod-POM/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	Pod-POM
 PORTVERSION=	2.00
+PORTREVISION=	1
 CATEGORIES=	textproc perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -13,9 +14,11 @@ COMMENT=	POD Object Model
 LICENSE=	ART10 GPLv1
 LICENSE_COMB=	dual
 
-BUILD_DEPENDS=	p5-File-Slurper>=0.004:${PORTSDIR}/devel/p5-File-Slurper
-RUN_DEPENDS:=	${BUILD_DEPENDS}
+TEST_DEPENDS=	p5-File-Slurper>=0.004:${PORTSDIR}/devel/p5-File-Slurper \
+		p5-Test-Differences>=0:${PORTSDIR}/devel/p5-Test-Differences \
+		p5-Text-Diff>=0:${PORTSDIR}/textproc/p5-Text-Diff
 
+NO_ARCH=	yes
 USES=		perl5
 USE_PERL5=	configure
 
