--- a/net/mrouted/files/mrouted.in
+++ b/net/mrouted/files/mrouted.in
@@ -15,6 +15,6 @@ pidfile="/var/run/${name}.pid"
 required_files="%%PREFIX%%/etc/${name}.conf"
 extra_commands="reload"
 
-: ${mrouted_enable-"NO"}
 load_rc_config $name
+: ${mrouted_enable="NO"}
 run_rc_command "$1"
