--- a/databases/elixir-ecto_migrate/Makefile
+++ b/databases/elixir-ecto_migrate/Makefile
@@ -11,6 +11,8 @@ COMMENT=	Automatic migrations for Ecto
 
 LICENSE=	APACHE20
 
+BROKEN=		does not build
+
 USES=		elixir
 USE_GITHUB=	yes
 GH_ACCOUNT=	xerions
