- Split xpdfopen package from texlive-base.  This is because it is the only   package depending on X11 library in it.
- Remove unnecessary libttf.so dependency [*].

PR:	202910 [*]

--- a/print/Makefile
+++ b/print/Makefile
@@ -260,6 +260,7 @@
     SUBDIR += utopia
     SUBDIR += xfce4-print
     SUBDIR += xmbibtex
+    SUBDIR += xpdfopen
     SUBDIR += xpp
     SUBDIR += xtexsh
     SUBDIR += yatex
