--- a/games/gnurobbo/Makefile
+++ b/games/gnurobbo/Makefile
@@ -21,7 +21,7 @@ PLIST_FILES=	bin/${PORTNAME}
 PORTDOCS=	*
 PORTDATA=	*
 
-WRKSRC=		${WRKDIR}/${DISTNAME}/${PORTNAME}
+WRKSRC_SUBDIR=	${PORTNAME}
 
 OPTIONS_DEFINE=	DOCS
 
