--- a/irc/epic5/Makefile
+++ b/irc/epic5/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	epic5
 PORTVERSION=	1.1.11
+PORTREVISION=	1
 CATEGORIES=	irc ipv6
 MASTER_SITES=	http://ftp.epicsol.org/pub/epic/EPIC5-PRODUCTION/
 
