- Fix PYDISTUTILS_EGGINFO, this time properly
Approved by:	portmgr blanket

--- a/japanese/py-mecab/Makefile
+++ b/japanese/py-mecab/Makefile
@@ -19,7 +19,7 @@ LIB_DEPENDS=	libmecab.so:${PORTSDIR}/japanese/mecab
 
 USES=		python
 USE_PYTHON=	distutils
-PYDISTUTILS_EGGINFO=	${PORTNAME}_python-${PORTVERSION}.post1-${PYTHON_VERSION:S/thon//}.egg-info
+PYDISTUTILS_EGGINFO=	${PORTNAME}_python-${PORTVERSION}.post2-py${PYTHON_VER}.egg-info
 
 pre-patch:
 	@${REINPLACE_CMD} -e 's|cmd1("mecab-config --version")|"${PKGVERSION}"|' \
