New Port: textproc/erlang-p1xml -  Fast Expat based Erlang XML parsing library
Approved by:	mat
Differential Revision:	https://reviews.freebsd.org/D3582

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -168,6 +168,7 @@
     SUBDIR += eo-aspell
     SUBDIR += eqe
     SUBDIR += erlang-edown
+    SUBDIR += erlang-p1xml
     SUBDIR += erlang-yamerl
     SUBDIR += es-aspell
     SUBDIR += es-hunspell
