--- a/misc/pcbsd-toolchain/Makefile
+++ b/misc/pcbsd-toolchain/Makefile
@@ -15,6 +15,8 @@ USES=		python
 RUN_DEPENDS=	sphinx-build:${PORTSDIR}/textproc/py-sphinx \
 		${PYTHON_PKGNAMEPREFIX}sphinx-intl>=0:${PORTSDIR}/textproc/py-sphinx-intl \
 		${PYTHON_PKGNAMEPREFIX}sphinx_rtd_theme>=0:${PORTSDIR}/textproc/py-sphinx_rtd_theme \
+		${PYTHON_PKGNAMEPREFIX}sphinx_numfig>=0:${PORTSDIR}/textproc/py-sphinx_numfig \
+		${PYTHON_PKGNAMEPREFIX}sphinx_wikipedia>=0:${PORTSDIR}/textproc/py-sphinx_wikipedia \
 		${PYTHON_PKGNAMEPREFIX}alabaster>=0:${PORTSDIR}/textproc/py-alabaster \
 		${PYTHON_PKGNAMEPREFIX}sphinxcontrib-httpdomain>=0:${PORTSDIR}/textproc/py-sphinxcontrib-httpdomain \
 		tex-formats>=0:${PORTSDIR}/print/tex-formats \
