--- a/devel/rubygem-newrelic_rpm/Makefile
+++ b/devel/rubygem-newrelic_rpm/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	newrelic_rpm
 PORTVERSION=	3.12.0.288
+PORTREVISION=	1
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
@@ -17,6 +18,8 @@ LICENSE_PERMS_NEWRELIC=	dist-mirror no-dist-sell pkg-mirror no-pkg-sell auto-acc
 USE_RUBY=	yes
 USE_RUBYGEMS=	yes
 RUBYGEM_AUTOPLIST=	yes
+USES=		shebangfix
+SHEBANG_FILES=	test/script/*.sh
 
 PLIST_FILES=	bin/mongrel_rpm bin/newrelic bin/newrelic_cmd bin/nrdebug
 
