--- a/devel/dconf/Makefile
+++ b/devel/dconf/Makefile
@@ -5,6 +5,7 @@
 PORTNAME?=	dconf
 PORTVERSION=	0.22.0
 PORTREVISION?=	1
+PORTREVISION=	1
 CATEGORIES=	devel gnome
 MASTER_SITES=	GNOME
 DISTNAME=	dconf-${PORTVERSION}
@@ -37,6 +38,7 @@ CONFIGURE_ARGS+=--disable-editor
 
 post-patch:
 	@${REINPLACE_CMD} -e 's|/etc/|${PREFIX}/etc/|g' \
+		-e 's|"/etc"|"${PREFIX}/etc"|g' \
 		${WRKSRC}/engine/dconf-engine.c \
 		${WRKSRC}/engine/dconf-engine-profile.c \
 		${WRKSRC}/engine/dconf-engine-source-system.c \
