--- a/databases/rubygem-rubyrep/Makefile
+++ b/databases/rubygem-rubyrep/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	rubyrep
 PORTVERSION=	1.2.0
+PORTREVISION=	1
 CATEGORIES=	databases rubygems
 MASTER_SITES=	RG
 
@@ -20,6 +21,8 @@ RUN_DEPENDS=	flog>=0:${PORTSDIR}/sysutils/flog \
 USE_RUBY=	yes
 USE_RUBYGEMS=	yes
 RUBYGEM_AUTOPLIST=	yes
+USES=		shebangfix
+SHEBANG_FILES=	bin/rubyrep rubyrep
 
 USE_RC_SUBR=	rubyrep
 
