--- a/security/clamav/Makefile
+++ b/security/clamav/Makefile
@@ -189,6 +189,10 @@ pre-configure:
 	fi
 .endif
 
+post-configure:
+	@${REINPLACE_CMD} -e 's|#define HAVE_MACH_MACH_H 1||g' \
+		${WRKSRC}/libclamav/c++/llvm/include/llvm/Config/config.h
+
 .if ${PORT_OPTIONS:MTESTS}
 post-build:
 	@if [ ! -f "${PY_NO_THREAD}" ]; then \
