New Port: textproc/smi Smi is a Simple Markup Interpreter / filter for simplified Markup dialect. smi can be fed text in Markdown, and return HTML output.  smi can be fed HTML, and return the markup translated to entities.  I use smi as a filter for devel/cgit to parse the README.md files, returning HTML output.  I am also using it to markup wiki pages, for a git backed wiki.  The use cases are limited only by your imagination.
WWW: http://BSDforge.com/projects/textproc/smi/

PR:		196224
Submitted by:	Chris Hutchinson <portmaster@bsdforge.com>
Approved by:	pgollucci (mentor)
Differential Revision:	https://reviews.freebsd.org/D3569

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1500,6 +1500,7 @@
     SUBDIR += sl-hyphen
     SUBDIR += sl-mythes
     SUBDIR += slides
+    SUBDIR += smi
     SUBDIR += smu
     SUBDIR += so-hunspell
     SUBDIR += soothsayer
