--- a/lang/go/Makefile
+++ b/lang/go/Makefile
@@ -41,7 +41,7 @@ IGNORE=		unknown arch ${ARCH}
 
 PLIST_SUB+=	ARCH=${GOARCH}
 
-.if (${OSVERSION} >= 1100000)
+.if ${OPSYS} == FreeBSD && (${OSVERSION} >= 1100000)
 EXTRA_PATCHES+=	${FILESDIR}/struct-if_data-patch
 .endif
 
